[package]
name = "improv-wifi-serial-client"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.19"
env_logger = "0.10.0"
trace = "0.1.6"
clap = { version = "4.3.19", features = ["derive"] }
clap-verbosity-flag = "2.0.1"
serialport = "4.2.1"
num_enum = "0.6.1"
